[tool.poetry]
name = "pyportfolioopt"
version = "1.5.5"
description = "Financial portfolio optimization in python"
license = "MIT"
authors = ["Robert Andrew Martin <martin.robertandrew@gmail.com>"]
readme = "README.md"
repository = "https://github.com/robertmartin8/PyPortfolioOpt"
documentation = "https://pyportfolioopt.readthedocs.io/en/latest/"
keywords= ["finance", "portfolio", "optimization", "quant", "investing"]
classifiers=[
        "Development Status :: 4 - Beta",
        "Environment :: Console",
        "Intended Audience :: Financial and Insurance Industry",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: MIT License",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3 :: Only",
        "Topic :: Office/Business :: Financial",
        "Topic :: Office/Business :: Financial :: Investment",
    ]
packages = [ {include = "pypfopt"} ]

[tool.poetry.urls]
"Issues" = "https://github.com/robertmartin8/PyPortfolioOpt/issues"
"Personal website" = "https://reasonabledeviations.com"

[tool.poetry.dependencies]
python = ">=3.11"
scipy = "*"
cvxpy = "*"
numpy = "*"
pandas = "*"
matplotlib = "*"
scikit-learn = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = "*"
jupyterlab = "*"
black = "*"
ipykernel = "*"
jedi = "*"
pytest-cov = "*"
yfinance = "*"

[tool.poetry.extras]
optionals = ["scikit-learn", "matplotlib", "cvxopt"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88

[tool.isort]
profile = "black"
